--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>URA1 U1- La información financiera para la toma de decisiones</title>
+<title>URA1 U1- Usos de la información financiera</title>
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <meta content="" name="description">
 
@@ -58,7 +58,7 @@
         <li class="menu-active"><a href="#intro">Introducción</a></li>
         <li class="menu-has-children"><a>Contenido</a>
           <ul>
-            <li><a href="#contenido01">La información financiera para la toma de decisiones</a></li>
+            <li><a href="#contenido01">Usos de la información financiera</a></li>
              <li><a href="#contenido02">Normas que rigen la contabilidad </a></li>
           </ul>
         </li>
@@ -119,7 +119,7 @@
   <div class="container wow fadeInUp">
     <div class="row">
       <div class="col-md-12">
-        <h3 class="contenido-title"><strong><em>La información financiera para la toma de decisiones</em></strong></h3>
+        <h3 class="contenido-title"><strong><em>Usos de la información financiera</em></strong></h3>
         <div class="banderilla-title">1</div><br>
         <div class="section-title-divider"></div>
         <p>En la actualidad contar con conocimientos sobre el manejo de la información financiera da una gran ventaja para organizar, conocer y dar seguimiento a las organizaciones. Contar con conocimientos contables es necesario sin importar la carrera o trabajo que se realiza, sin importar si te encuentras en la situación de gerente, administrador o si se emprende su propio negocio, siempre es necesario contar con conocimientos contables.</p>
