--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <div class="hero-container">
     <div class="wow fadeIn">
       <div class="hero-logo"> </div>
-      <h1>La información financiera para la toma de decisiones</h1>
+      <h1>Usos de la información financiera</h1>
       <br><br><br>
       <div class="actions"> <a href="#intro" class="btn-get-started">Inicio</a> </div>
     </div>
